--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -605,6 +605,12 @@ body {
   .selects-row .ttl-options {
     flex: 1;
     border-bottom: 3px solid #c0c0c0;
+      align-self: stretch;
+  }
+
+  .selects-row .ttl-options:first-child {
+    border-bottom: 3px solid #c0c0c0;
+  
   }
 }
 
